Removing the counter from contract names, easier to move things.

--- a/GameData/ContractPacks/KPlanes/Groups/Early/AroundThePoles.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Early/AroundThePoles.cfg
@@ -6,7 +6,7 @@
 CONTRACT_TYPE
 {
 
-	sortKey = a004
+	sortKey = a009
 
 //REQUIREMENTS FOR CONTRACT TO APPEAR
 
@@ -15,7 +15,7 @@ CONTRACT_TYPE
 		name = CompleteContract
 		type = CompleteContract
 
-		contractType = Start-001-FirstFlight
+		contractType = Early-ToTheNorthPole
 		minCount = 1
 
 	}
@@ -28,14 +28,14 @@ CONTRACT_TYPE
 	{
 		type = string
 
-		craft = KPlanesCraft_Start_004
+		craft = KPlanesCraft_Early_009
 
 	}
 
 	DATA
 	{
 		type = double
-		AltMax = Round(@KPlanes:TroposphereHigh * 1000.0)
+		AltMax = Round(@KPlanes:StratosphereHigh * 1000.0)
 		ScaledAltMax = Round(@/AltMax / 1000.0)
 		title = Maximum altitude
 	}
@@ -43,7 +43,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		DescAltMax = " (Troposphere High)"
+		DescAltMax = " (Stratosphere High)"
 		title = Maximum altitude
 	}
 
@@ -64,7 +64,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = double
-		Distance = Round(@KPlanes:ShortHop * 1000.0)
+		Distance = Round(@KPlanes:CircumPolar * 1000.0)
 		ScaledDistance = Round(@/Distance / 1000.0)
 		title = Distance
 	}
@@ -72,7 +72,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		DescDistance = " (Short Hop)"
+		DescDistance = " (Circum Polar)"
 		title = Distance
 	}
 
@@ -90,42 +90,20 @@ CONTRACT_TYPE
 		title = Range for distance 
 	}
 
-	DATA
-	{
-		type = double
-		MarkerDistance = Round(@KPlanes:ShortHop * 1000.0) / 2.0
-		ScaledMarkerDistance = Round(@/MarkerDistance / 1000.0)
-		title = Distance
-	}
-
-	DATA
-	{
-		type = string
-		DescMarkerDistance = ""
-		title = Distance
-	}
-
-	DATA
-	{
-		type = string
-		PrettyMarkerDistance = @/ScaledMarkerDistance.ToString("#,# km")
-		title = Distance
-	}
-
 //CONTRACT DESCRIPTION
 
-	name = Start-004-ShortHop
-	title = #autoLOC_KPlanes_Start_004_ShortHop_title
-	group = KPlanes_Start
-	agent = Wright Aeronautical
+	name = Early-AroundThePoles
+	title = #autoLOC_KPlanes_Early_AroundThePoles_title
+	group = KPlanes_Early
+	agent = KACA
 
-	description = #autoLOC_KPlanes_Start_004_ShortHop_description
+	description = #autoLOC_KPlanes_Early_AroundThePoles_description
 
-	synopsis = #autoLOC_KPlanes_Start_004_ShortHop_synopsis
+	synopsis = #autoLOC_KPlanes_Early_AroundThePoles_synopsis
 
-	notes = #autoLOC_KPlanes_Start_004_ShortHop_notes
+	notes = #autoLOC_KPlanes_Early_AroundThePoles_notes
 
-	completedMessage = #autoLOC_KPlanes_Start_004_ShortHop_completedMessage
+	completedMessage = #autoLOC_KPlanes_Early_AroundThePoles_completedMessage
 
 //Contract Limits
 	maxCompletions = 1
@@ -141,18 +119,18 @@ CONTRACT_TYPE
 	deadline = 0
 
 //Contract Reward Modifiers
-	prestige = Trivial
+	prestige = Significant
 	targetBody = HomeWorld()
 
 //Contract Rewards
-	advanceFunds = 8 * @KPlanes:RewardAdvanceFunds
-	rewardFunds = 8 * @KPlanes:RewardFunds
-	rewardReputation = 5 * @KPlanes:RewardReputation
-	rewardScience = 3 * @KPlanes:RewardScience
+	advanceFunds = 80 * @KPlanes:RewardAdvanceFunds
+	rewardFunds = 80 * @KPlanes:RewardFunds
+	rewardReputation = 25 * @KPlanes:RewardReputation
+	rewardScience = 20 * @KPlanes:RewardScience
 
 //Contract Penalties
-	failureFunds = 8 * @KPlanes:FailureFunds
-	failureReputation = 5 * @KPlanes:FailureReputation
+	failureFunds = 80 * @KPlanes:FailureFunds
+	failureReputation = 25 * @KPlanes:FailureReputation
 
 
 //PARAMETERS FOR CONTRACT COMPLETION
@@ -281,7 +259,19 @@ CONTRACT_TYPE
 
 	}
 
-//Contract Behaviour (Distance Marker)
+//Contract Behaviour (Waypoints)
+	DATA
+	{
+		type = double
+		Marker1Lat = 90.0
+		Marker1Lon = KSC().Location().Longitude()
+		Marker2Lat = KSC().Location().Latitude()
+		Marker2Lon = KSC().Location().Longitude() >= 0.0 ? KSC().Location().Longitude() - 180.0 : KSC().Location().Longitude() + 180.0
+		Marker3Lat = -90.0
+		Marker3Lon = KSC().Location().Longitude()
+		title = Marker Locations
+	}
+
 	BEHAVIOUR
 	{
 	    name = WaypointGenerator
@@ -297,18 +287,37 @@ CONTRACT_TYPE
 	        pqsCity = KSC
 	    }
 
-	    RANDOM_WAYPOINT_NEAR
+	    WAYPOINT
 	    {
-		name = Distance Marker
+		name = Marker 1
 
 		targetBody = HomeWorld()
-		count = 1
 		icon = custom
 		altitude = 0.0
-		waterAllowed = true
-		nearIndex = 0
-		minDistance = @/MarkerDistance
-		maxDistance = @/MarkerDistance
+		latitude = @/Marker1Lat
+		longitude = @/Marker1Lon
+	    }
+
+	    WAYPOINT
+	    {
+		name = Marker 2
+
+		targetBody = HomeWorld()
+		icon = custom
+		altitude = 0.0
+		latitude = @/Marker2Lat
+		longitude = @/Marker2Lon
+	    }
+
+	    WAYPOINT
+	    {
+		name = Marker 3
+
+		targetBody = HomeWorld()
+		icon = custom
+		altitude = 0.0
+		latitude = @/Marker3Lat
+		longitude = @/Marker3Lon
 	    }
 	}
 
@@ -351,31 +360,70 @@ CONTRACT_TYPE
 	{
 		name = VesselParameterGroup
 		type = VesselParameterGroup
-		title = fly to waypoint "Distance Marker" which is @/PrettyMarkerDistance from KSC
+		title = fly to Marker 1, 2 and 3 in sequence, then return to KSC
 
 		vessel = @/craft
 
 		PARAMETER
 		{
-			name = VisitWaypoint
+			name = Marker1Reached
 			type = VisitWaypoint
 
 			index = 1
 			distance = 0.0
 			horizontalDistance = 1.0
 			hideOnCompletion = true
-			completedMessage = You reached the Distance Marker, head back to the KSC.
+			completedMessage = You reached the Marker 1, head to Marker 2.
 			showMessages = true
 
+			completeInSequence = true
 			disableOnStateChange = true
 			hideChildren = true
-			hidden = true
+			hidden = false
+
+		}
+
+		PARAMETER
+		{
+			name = Marker2Reached
+			type = VisitWaypoint
+
+			index = 2
+			distance = 0.0
+			horizontalDistance = 1.0
+			hideOnCompletion = true
+			completedMessage = You reached the Marker 2, head to Marker 3.
+			showMessages = true
+
+			completeInSequence = true
+			disableOnStateChange = true
+			hideChildren = true
+			hidden = false
+
+		}
+
+		PARAMETER
+		{
+			name = Marker3Reached
+			type = VisitWaypoint
+
+			index = 3
+			distance = 0.0
+			horizontalDistance = 1.0
+			hideOnCompletion = true
+			completedMessage = You reached the Marker 3, head back to KSC.
+			showMessages = true
+
+			completeInSequence = true
+			disableOnStateChange = true
+			hideChildren = true
+			hidden = false
 
 		}
 
 		completeInSequence = true
 		disableOnStateChange = true
-		hideChildren = true
+		hideChildren = false
 
 	}
 
