--- a/GameData/ContractPacks/KPlanes/Groups/Early/Mach3.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Early/Mach3.cfg
@@ -17,7 +17,7 @@ CONTRACT_TYPE
 		name = CompleteContract
 		type = CompleteContract
 
-		contractType = Early-004-Mach2
+		contractType = Early-Mach2
 		minCount = 1
 
 	}
@@ -116,18 +116,18 @@ CONTRACT_TYPE
 
 //CONTRACT DESCRIPTION
 
-	name = Early-008-Mach3
-	title = #autoLOC_KPlanes_Early_008_Mach3_title
+	name = Early-Mach3
+	title = #autoLOC_KPlanes_Early_Mach3_title
 	group = KPlanes_Early
 	agent = KACA
 
-	description = #autoLOC_KPlanes_Early_008_Mach3_description
+	description = #autoLOC_KPlanes_Early_Mach3_description
 
-	synopsis = #autoLOC_KPlanes_Early_008_Mach3_synopsis
+	synopsis = #autoLOC_KPlanes_Early_Mach3_synopsis
 
-	notes = #autoLOC_KPlanes_Early_008_Mach3_notes
+	notes = #autoLOC_KPlanes_Early_Mach3_notes
 
-	completedMessage = #autoLOC_KPlanes_Early_008_Mach3_completedMessage
+	completedMessage = #autoLOC_KPlanes_Early_Mach3_completedMessage
 
 //Contract Limits
 	maxCompletions = 1
