--- a/GameData/ContractPacks/KPlanes/Groups/Early/StratosphericJet.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Early/StratosphericJet.cfg
@@ -6,7 +6,7 @@
 CONTRACT_TYPE
 {
 
-	sortKey = a003
+	sortKey = a005
 
 //REQUIREMENTS FOR CONTRACT TO APPEAR
 
@@ -15,7 +15,17 @@ CONTRACT_TYPE
 		name = CompleteContract
 		type = CompleteContract
 
-		contractType = Early-012-Mach4
+		contractType = Early-StratosphereHigh
+		minCount = 1
+
+	}
+
+	REQUIREMENT
+	{
+		name = CompleteContract
+		type = CompleteContract
+
+		contractType = Early-Mach1
 		minCount = 1
 
 	}
@@ -28,7 +38,7 @@ CONTRACT_TYPE
 	{
 		type = string
 
-		craft = KPlanesCraft_Modern_003
+		craft = KPlanesCraft_Early_005
 
 	}
 
@@ -57,7 +67,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = double
-		AltMax = Round(@KPlanes:ThermosphereLow * 1000.0)
+		AltMax = Round(@KPlanes:StratosphereHigh * 1000.0)
 		ScaledAltMax = Round(@/AltMax / 1000.0)
 		title = Maximum altitude
 	}
@@ -65,7 +75,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		DescAltMax = " (Thermosphere Low)"
+		DescAltMax = " (Stratosphere High)"
 		title = Maximum altitude
 	}
 
@@ -86,7 +96,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = double
-		Speed = Round(@KPlanes:Mach5 * 1.0)
+		Speed = Round(@KPlanes:Mach1 * 1.0)
 		ScaledSpeed = Round(@/Speed / 1.0)
 		title = Speed
 	}
@@ -94,7 +104,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		DescSpeed = " (Mach5)"
+		DescSpeed = " (Mach1)"
 		title = Speed
 	}
 
@@ -114,18 +124,18 @@ CONTRACT_TYPE
 
 //CONTRACT DESCRIPTION
 
-	name = Modern-003-Mach5
-	title = #autoLOC_KPlanes_Modern_003_Mach5_title
-	group = KPlanes_Modern
-	agent = KASA
+	name = Early-StratosphericJet
+	title = #autoLOC_KPlanes_Early_StratosphericJet_title
+	group = KPlanes_Early
+	agent = KACA
 
-	description = #autoLOC_KPlanes_Modern_003_Mach5_description
+	description = #autoLOC_KPlanes_Early_StratosphericJet_description
 
-	synopsis = #autoLOC_KPlanes_Modern_003_Mach5_synopsis
+	synopsis = #autoLOC_KPlanes_Early_StratosphericJet_synopsis
 
-	notes = #autoLOC_KPlanes_Modern_003_Mach5_notes
+	notes = #autoLOC_KPlanes_Early_StratosphericJet_notes
 
-	completedMessage = #autoLOC_KPlanes_Modern_003_Mach5_completedMessage
+	completedMessage = #autoLOC_KPlanes_Early_StratosphericJet_completedMessage
 
 //Contract Limits
 	maxCompletions = 1
@@ -141,18 +151,18 @@ CONTRACT_TYPE
 	deadline = 0
 
 //Contract Reward Modifiers
-	prestige = Exceptional
+	prestige = Significant
 	targetBody = HomeWorld()
 
 //Contract Rewards
-	advanceFunds = 120 * @KPlanes:RewardAdvanceFunds
-	rewardFunds = 120 * @KPlanes:RewardFunds
-	rewardReputation = 35 * @KPlanes:RewardReputation
-	rewardScience = 25 * @KPlanes:RewardScience
+	advanceFunds = 50 * @KPlanes:RewardAdvanceFunds
+	rewardFunds = 50 * @KPlanes:RewardFunds
+	rewardReputation = 20 * @KPlanes:RewardReputation
+	rewardScience = 12 * @KPlanes:RewardScience
 
 //Contract Penalties
-	failureFunds = 120 * @KPlanes:FailureFunds
-	failureReputation = 35 * @KPlanes:FailureReputation
+	failureFunds = 50 * @KPlanes:FailureFunds
+	failureReputation = 20 * @KPlanes:FailureReputation
 
 
 //PARAMETERS FOR CONTRACT COMPLETION
@@ -198,7 +208,7 @@ CONTRACT_TYPE
 		{
 			name = All
 			type = All
-			title = have air breathing engines and/or rockets
+			title = have air breathing engines only
 
 			PARAMETER
 			{
@@ -215,6 +225,58 @@ CONTRACT_TYPE
 					}
 
 				}
+
+				disableOnStateChange = false
+				hideChildren = true
+
+			}
+
+			PARAMETER
+			{
+				name = PartValidation
+				type = PartValidation
+				title = not have any liquid rocket engines
+
+				NONE
+				{
+					MODULE
+					{
+						EngineType = LiquidFuel
+
+					}
+
+				}
+
+				disableOnStateChange = false
+				hideChildren = true
+
+			}
+
+
+			PARAMETER
+			{
+				name = HasResource
+				type = HasResource
+				title = not have any solid rocket fuel
+
+				resource = SolidFuel
+				minQuantity = 0.0
+				maxQuantity = 0.0
+
+				disableOnStateChange = false
+				hideChildren = true
+
+			}
+
+			PARAMETER
+			{
+				name = HasResource
+				type = HasResource
+				title = not have any oxidizer
+
+				resource = Oxidizer
+				minQuantity = 0.0
+				maxQuantity = 0.0
 
 				disableOnStateChange = false
 				hideChildren = true
