--- a/GameData/ContractPacks/KPlanes/Groups/Start/ContinentalDistance.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/ContinentalDistance.cfg
@@ -6,7 +6,7 @@
 CONTRACT_TYPE
 {
 
-	sortKey = a008
+	sortKey = a010
 
 //REQUIREMENTS FOR CONTRACT TO APPEAR
 
@@ -15,7 +15,7 @@ CONTRACT_TYPE
 		name = CompleteContract
 		type = CompleteContract
 
-		contractType = Start-004-ShortHop
+		contractType = Start-DomesticDistance
 		minCount = 1
 
 	}
@@ -28,7 +28,7 @@ CONTRACT_TYPE
 	{
 		type = string
 
-		craft = KPlanesCraft_Start_008
+		craft = KPlanesCraft_Start_010
 
 	}
 
@@ -64,7 +64,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = double
-		Distance = Round(@KPlanes:Domestic * 1000.0)
+		Distance = Round(@KPlanes:Continental * 1000.0)
 		ScaledDistance = Round(@/Distance / 1000.0)
 		title = Distance
 	}
@@ -72,7 +72,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		DescDistance = " (Domestic)"
+		DescDistance = " (Continental)"
 		title = Distance
 	}
 
@@ -93,7 +93,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = double
-		MarkerDistance = Round(@KPlanes:Domestic * 1000.0) / 2.0
+		MarkerDistance = Round(@KPlanes:Continental * 1000.0) / 2.0
 		ScaledMarkerDistance = Round(@/MarkerDistance / 1000.0)
 		title = Distance
 	}
@@ -114,18 +114,18 @@ CONTRACT_TYPE
 
 //CONTRACT DESCRIPTION
 
-	name = Start-008-DomesticDistance
-	title = #autoLOC_KPlanes_Start_008_DomesticDistance_title
+	name = Start-ContinentalDistance
+	title = #autoLOC_KPlanes_Start_ContinentalDistance_title
 	group = KPlanes_Start
 	agent = Wright Aeronautical
 
-	description = #autoLOC_KPlanes_Start_008_DomesticDistance_description
+	description = #autoLOC_KPlanes_Start_ContinentalDistance_description
 
-	synopsis = #autoLOC_KPlanes_Start_008_DomesticDistance_synopsis
+	synopsis = #autoLOC_KPlanes_Start_ContinentalDistance_synopsis
 
-	notes = #autoLOC_KPlanes_Start_008_DomesticDistance_notes
+	notes = #autoLOC_KPlanes_Start_ContinentalDistance_notes
 
-	completedMessage = #autoLOC_KPlanes_Start_008_DomesticDistance_completedMessage
+	completedMessage = #autoLOC_KPlanes_Start_ContinentalDistance_completedMessage
 
 //Contract Limits
 	maxCompletions = 1
@@ -145,13 +145,13 @@ CONTRACT_TYPE
 	targetBody = HomeWorld()
 
 //Contract Rewards
-	advanceFunds = 10 * @KPlanes:RewardAdvanceFunds
-	rewardFunds = 10 * @KPlanes:RewardFunds
+	advanceFunds = 12 * @KPlanes:RewardAdvanceFunds
+	rewardFunds = 12 * @KPlanes:RewardFunds
 	rewardReputation = 5 * @KPlanes:RewardReputation
 	rewardScience = 3 * @KPlanes:RewardScience
 
 //Contract Penalties
-	failureFunds = 10 * @KPlanes:FailureFunds
+	failureFunds = 12 * @KPlanes:FailureFunds
 	failureReputation = 5 * @KPlanes:FailureReputation
 
 
