--- a/GameData/ContractPacks/KPlanes/Groups/Start/DomesticDistance.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/DomesticDistance.cfg
@@ -6,7 +6,7 @@
 CONTRACT_TYPE
 {
 
-	sortKey = a006
+	sortKey = a008
 
 //REQUIREMENTS FOR CONTRACT TO APPEAR
 
@@ -15,7 +15,7 @@ CONTRACT_TYPE
 		name = CompleteContract
 		type = CompleteContract
 
-		contractType = Start-012-IntercontinentalDistance
+		contractType = Start-ShortHop
 		minCount = 1
 
 	}
@@ -28,14 +28,14 @@ CONTRACT_TYPE
 	{
 		type = string
 
-		craft = KPlanesCraft_Early_006
+		craft = KPlanesCraft_Start_008
 
 	}
 
 	DATA
 	{
 		type = double
-		AltMax = Round(@KPlanes:StratosphereHigh * 1000.0)
+		AltMax = Round(@KPlanes:StratosphereLow * 1000.0)
 		ScaledAltMax = Round(@/AltMax / 1000.0)
 		title = Maximum altitude
 	}
@@ -43,7 +43,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		DescAltMax = " (Stratosphere High)"
+		DescAltMax = " (Stratosphere Low)"
 		title = Maximum altitude
 	}
 
@@ -64,7 +64,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = double
-		Distance = Round(@KPlanes:Polar * 1000.0)
+		Distance = Round(@KPlanes:Domestic * 1000.0)
 		ScaledDistance = Round(@/Distance / 1000.0)
 		title = Distance
 	}
@@ -72,7 +72,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		DescDistance = " (Polar)"
+		DescDistance = " (Domestic)"
 		title = Distance
 	}
 
@@ -90,20 +90,42 @@ CONTRACT_TYPE
 		title = Range for distance 
 	}
 
+	DATA
+	{
+		type = double
+		MarkerDistance = Round(@KPlanes:Domestic * 1000.0) / 2.0
+		ScaledMarkerDistance = Round(@/MarkerDistance / 1000.0)
+		title = Distance
+	}
+
+	DATA
+	{
+		type = string
+		DescMarkerDistance = ""
+		title = Distance
+	}
+
+	DATA
+	{
+		type = string
+		PrettyMarkerDistance = @/ScaledMarkerDistance.ToString("#,# km")
+		title = Distance
+	}
+
 //CONTRACT DESCRIPTION
 
-	name = Early-006-ToTheNorthPole
-	title = #autoLOC_KPlanes_Early_006_ToTheNorthPole_title
-	group = KPlanes_Early
-	agent = KACA
+	name = Start-DomesticDistance
+	title = #autoLOC_KPlanes_Start_DomesticDistance_title
+	group = KPlanes_Start
+	agent = Wright Aeronautical
 
-	description = #autoLOC_KPlanes_Early_006_ToTheNorthPole_description
+	description = #autoLOC_KPlanes_Start_DomesticDistance_description
 
-	synopsis = #autoLOC_KPlanes_Early_006_ToTheNorthPole_synopsis
+	synopsis = #autoLOC_KPlanes_Start_DomesticDistance_synopsis
 
-	notes = #autoLOC_KPlanes_Early_006_ToTheNorthPole_notes
+	notes = #autoLOC_KPlanes_Start_DomesticDistance_notes
 
-	completedMessage = #autoLOC_KPlanes_Early_006_ToTheNorthPole_completedMessage
+	completedMessage = #autoLOC_KPlanes_Start_DomesticDistance_completedMessage
 
 //Contract Limits
 	maxCompletions = 1
@@ -123,14 +145,14 @@ CONTRACT_TYPE
 	targetBody = HomeWorld()
 
 //Contract Rewards
-	advanceFunds = 60 * @KPlanes:RewardAdvanceFunds
-	rewardFunds = 60 * @KPlanes:RewardFunds
-	rewardReputation = 25 * @KPlanes:RewardReputation
-	rewardScience = 12 * @KPlanes:RewardScience
+	advanceFunds = 10 * @KPlanes:RewardAdvanceFunds
+	rewardFunds = 10 * @KPlanes:RewardFunds
+	rewardReputation = 5 * @KPlanes:RewardReputation
+	rewardScience = 3 * @KPlanes:RewardScience
 
 //Contract Penalties
-	failureFunds = 60 * @KPlanes:FailureFunds
-	failureReputation = 25 * @KPlanes:FailureReputation
+	failureFunds = 10 * @KPlanes:FailureFunds
+	failureReputation = 5 * @KPlanes:FailureReputation
 
 
 //PARAMETERS FOR CONTRACT COMPLETION
@@ -259,19 +281,7 @@ CONTRACT_TYPE
 
 	}
 
-//Contract Behaviour (Waypoints)
-	DATA
-	{
-		type = double
-		Marker1Lat = (90.0 - KSC().Location().Latitude()) / 2.0 + KSC().Location().Latitude()
-		Marker1Lon = KSC().Location().Longitude() + 2.0
-		Marker2Lat = 90.0
-		Marker2Lon = KSC().Location().Longitude()
-		Marker3Lat = @/Marker1Lat
-		Marker3Lon = @/Marker1Lon - 2.0
-		title = Marker Locations
-	}
-
+//Contract Behaviour (Distance Marker)
 	BEHAVIOUR
 	{
 	    name = WaypointGenerator
@@ -287,37 +297,18 @@ CONTRACT_TYPE
 	        pqsCity = KSC
 	    }
 
-	    WAYPOINT
+	    RANDOM_WAYPOINT_NEAR
 	    {
-		name = Marker 1
+		name = Distance Marker
 
 		targetBody = HomeWorld()
+		count = 1
 		icon = custom
 		altitude = 0.0
-		latitude = @/Marker1Lat
-		longitude = @/Marker1Lon
-	    }
-
-	    WAYPOINT
-	    {
-		name = Marker 2
-
-		targetBody = HomeWorld()
-		icon = custom
-		altitude = 0.0
-		latitude = @/Marker2Lat
-		longitude = @/Marker2Lon
-	    }
-
-	    WAYPOINT
-	    {
-		name = Marker 3
-
-		targetBody = HomeWorld()
-		icon = custom
-		altitude = 0.0
-		latitude = @/Marker3Lat
-		longitude = @/Marker3Lon
+		waterAllowed = true
+		nearIndex = 0
+		minDistance = @/MarkerDistance
+		maxDistance = @/MarkerDistance
 	    }
 	}
 
@@ -360,70 +351,31 @@ CONTRACT_TYPE
 	{
 		name = VesselParameterGroup
 		type = VesselParameterGroup
-		title = fly to Marker 1, 2 and 3 in sequence, then return to KSC
+		title = fly to waypoint "Distance Marker" which is @/PrettyMarkerDistance from KSC
 
 		vessel = @/craft
 
 		PARAMETER
 		{
-			name = Marker1Reached
+			name = VisitWaypoint
 			type = VisitWaypoint
 
 			index = 1
 			distance = 0.0
 			horizontalDistance = 1.0
 			hideOnCompletion = true
-			completedMessage = You reached the Marker 1, head to Marker 2.
+			completedMessage = You reached the Distance Marker, head back to the KSC.
 			showMessages = true
 
-			completeInSequence = true
 			disableOnStateChange = true
 			hideChildren = true
-			hidden = false
-
-		}
-
-		PARAMETER
-		{
-			name = Marker2Reached
-			type = VisitWaypoint
-
-			index = 2
-			distance = 0.0
-			horizontalDistance = 1.0
-			hideOnCompletion = true
-			completedMessage = You reached the Marker 2, head to Marker 3.
-			showMessages = true
-
-			completeInSequence = true
-			disableOnStateChange = true
-			hideChildren = true
-			hidden = false
-
-		}
-
-		PARAMETER
-		{
-			name = Marker3Reached
-			type = VisitWaypoint
-
-			index = 3
-			distance = 0.0
-			horizontalDistance = 1.0
-			hideOnCompletion = true
-			completedMessage = You reached the Marker 3, head back to KSC.
-			showMessages = true
-
-			completeInSequence = true
-			disableOnStateChange = true
-			hideChildren = true
-			hidden = false
+			hidden = true
 
 		}
 
 		completeInSequence = true
 		disableOnStateChange = true
-		hideChildren = false
+		hideChildren = true
 
 	}
 
