--- a/GameData/ContractPacks/KPlanes/Groups/Start/FirstFlight.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/FirstFlight.cfg
@@ -97,18 +97,18 @@ CONTRACT_TYPE
 
 //CONTRACT DESCRIPTION
 
-	name = Start-001-FirstFlight
-	title = #autoLOC_KPlanes_Start_001_FirstFlight_title
+	name = Start-FirstFlight
+	title = #autoLOC_KPlanes_Start_FirstFlight_title
 	group = KPlanes_Start
 	agent = Wright Aeronautical
 
-	description = #autoLOC_KPlanes_Start_001_FirstFlight_description
+	description = #autoLOC_KPlanes_Start_FirstFlight_description
 
-	synopsis = #autoLOC_KPlanes_Start_001_FirstFlight_synopsis
+	synopsis = #autoLOC_KPlanes_Start_FirstFlight_synopsis
 
-	notes = #autoLOC_KPlanes_Start_001_FirstFlight_notes
+	notes = #autoLOC_KPlanes_Start_FirstFlight_notes
 
-	completedMessage = #autoLOC_KPlanes_Start_001_FirstFlight_completedMessage
+	completedMessage = #autoLOC_KPlanes_Start_FirstFlight_completedMessage
 
 //Contract Limits
 	maxCompletions = 1
