--- a/GameData/ContractPacks/KPlanes/Groups/Start/Mountaineer.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/Mountaineer.cfg
@@ -6,7 +6,7 @@
 CONTRACT_TYPE
 {
 
-	sortKey = a006
+	sortKey = a011
 
 //REQUIREMENTS FOR CONTRACT TO APPEAR
 
@@ -15,7 +15,7 @@ CONTRACT_TYPE
 		name = CompleteContract
 		type = CompleteContract
 
-		contractType = Modern-003-Mach5
+		contractType = Start-DomesticDistance
 		minCount = 1
 
 	}
@@ -28,14 +28,14 @@ CONTRACT_TYPE
 	{
 		type = string
 
-		craft = KPlanesCraft_Modern_006
+		craft = KPlanesCraft_Start_011
 
 	}
 
 	DATA
 	{
 		type = double
-		AltMin = Round(@KPlanes:StratosphereHigh * 1000.0)
+		AltMin = Round(1 * 1000.0)
 		ScaledAltMin = Round(@/AltMin / 1000.0)
 		title = Minimum altitude
 	}
@@ -43,7 +43,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		DescAltMin = " (Stratosphere High)"
+		DescAltMin = ""
 		title = Minimum altitude
 	}
 
@@ -56,76 +56,25 @@ CONTRACT_TYPE
 
 	DATA
 	{
-		type = double
-		AltMax = Round(@KPlanes:ThermosphereLow * 1000.0)
-		ScaledAltMax = Round(@/AltMax / 1000.0)
-		title = Maximum altitude
-	}
-
-	DATA
-	{
 		type = string
-		DescAltMax = " (Thermosphere Low)"
-		title = Maximum altitude
-	}
-
-	DATA
-	{
-		type = string
-		PrettyAltMax = @/ScaledAltMax.ToString("#,# km")
-		title = Maximum altitude
-	}
-
-	DATA
-	{
-		type = string
-		PrettyAltRange = altitude between @/PrettyAltMin@/DescAltMin and @/PrettyAltMax@/DescAltMax
+		PrettyAltRange = altitude above @/PrettyAltMin@/DescAltMin
 		title = Range for altitude 
-	}
-
-	DATA
-	{
-		type = double
-		Speed = Round(@KPlanes:Mach10 * 1.0)
-		ScaledSpeed = Round(@/Speed / 1.0)
-		title = Speed
-	}
-
-	DATA
-	{
-		type = string
-		DescSpeed = " (Mach10)"
-		title = Speed
-	}
-
-	DATA
-	{
-		type = string
-		PrettySpeed = @/ScaledSpeed.ToString("#,# m/s")
-		title = Speed
-	}
-
-	DATA
-	{
-		type = string
-		PrettySpeedRange = speed of at least @/PrettySpeed@/DescSpeed
-		title = Range for speed 
 	}
 
 //CONTRACT DESCRIPTION
 
-	name = Modern-006-Mach10
-	title = #autoLOC_KPlanes_Modern_006_Mach10_title
-	group = KPlanes_Modern
-	agent = KASA
+	name = Start-Mountaineer
+	title = #autoLOC_KPlanes_Start_Mountaineer_title
+	group = KPlanes_Start
+	agent = Wright Aeronautical
 
-	description = #autoLOC_KPlanes_Modern_006_Mach10_description
+	description = #autoLOC_KPlanes_Start_Mountaineer_description
 
-	synopsis = #autoLOC_KPlanes_Modern_006_Mach10_synopsis
+	synopsis = #autoLOC_KPlanes_Start_Mountaineer_synopsis
 
-	notes = #autoLOC_KPlanes_Modern_006_Mach10_notes
+	notes = #autoLOC_KPlanes_Start_Mountaineer_notes
 
-	completedMessage = #autoLOC_KPlanes_Modern_006_Mach10_completedMessage
+	completedMessage = #autoLOC_KPlanes_Start_Mountaineer_completedMessage
 
 //Contract Limits
 	maxCompletions = 1
@@ -141,18 +90,18 @@ CONTRACT_TYPE
 	deadline = 0
 
 //Contract Reward Modifiers
-	prestige = Significant
+	prestige = Trivial
 	targetBody = HomeWorld()
 
 //Contract Rewards
-	advanceFunds = 250 * @KPlanes:RewardAdvanceFunds
-	rewardFunds = 250 * @KPlanes:RewardFunds
-	rewardReputation = 30 * @KPlanes:RewardReputation
-	rewardScience = 25 * @KPlanes:RewardScience
+	advanceFunds = 15 * @KPlanes:RewardAdvanceFunds
+	rewardFunds = 15 * @KPlanes:RewardFunds
+	rewardReputation = 10 * @KPlanes:RewardReputation
+	rewardScience = 3 * @KPlanes:RewardScience
 
 //Contract Penalties
-	failureFunds = 250 * @KPlanes:FailureFunds
-	failureReputation = 30 * @KPlanes:FailureReputation
+	failureFunds = 15 * @KPlanes:FailureFunds
+	failureReputation = 10 * @KPlanes:FailureReputation
 
 
 //PARAMETERS FOR CONTRACT COMPLETION
@@ -196,9 +145,26 @@ CONTRACT_TYPE
 
 		PARAMETER
 		{
+			name = ReachState
+			type = ReachState
+
+			targetBody = HomeWorld()
+			biome = Mountains
+			minAltitude = @/AltMin
+			situation = LANDED
+			maxSpeed = 0.0
+
+			disableOnStateChange = true
+			hideChildren = true
+			hidden = true
+
+		}
+
+		PARAMETER
+		{
 			name = All
 			type = All
-			title = have air breathing engines and/or rockets
+			title = have air breathing engines only
 
 			PARAMETER
 			{
@@ -221,129 +187,64 @@ CONTRACT_TYPE
 
 			}
 
+			PARAMETER
+			{
+				name = PartValidation
+				type = PartValidation
+				title = not have any liquid rocket engines
+
+				NONE
+				{
+					MODULE
+					{
+						EngineType = LiquidFuel
+
+					}
+
+				}
+
+				disableOnStateChange = false
+				hideChildren = true
+
+			}
+
+
+			PARAMETER
+			{
+				name = HasResource
+				type = HasResource
+				title = not have any solid rocket fuel
+
+				resource = SolidFuel
+				minQuantity = 0.0
+				maxQuantity = 0.0
+
+				disableOnStateChange = false
+				hideChildren = true
+
+			}
+
+			PARAMETER
+			{
+				name = HasResource
+				type = HasResource
+				title = not have any oxidizer
+
+				resource = Oxidizer
+				minQuantity = 0.0
+				maxQuantity = 0.0
+
+				disableOnStateChange = false
+				hideChildren = true
+
+			}
+
 			disableOnStateChange = false
 
 		}
 
 		disableOnStateChange = false
 
-	}
-
-//Contract Goals
-	PARAMETER
-	{
-		name = All
-		type = All
-		title = achieve a maximum airspeed of @/PrettySpeed
-
-		PARAMETER
-		{
-			name = VesselParameterGroup
-			type = VesselParameterGroup
-			title = fly at an @/PrettyAltRange
-	
-			vessel = @/craft
-	
-			PARAMETER
-			{
-				name = ReachState
-				type = ReachState
-	
-				targetBody = HomeWorld()
-				situation = FLYING
-				minAltitude = @/AltMin
-				maxAltitude = @/AltMax
-	
-				disableOnStateChange = false
-				hideChildren = true
-				hidden = true
-	
-			}
-	
-			completeInSequence = false
-			disableOnStateChange = false
-			hideChildren = true
-	
-		}
-	
-		PARAMETER
-		{
-			name = VesselParameterGroup
-			type = VesselParameterGroup
-			title = fly faster than @/PrettySpeed
-	
-			vessel = @/craft
-	
-			PARAMETER
-			{
-				name = ReachState
-				type = ReachState
-	
-				targetBody = HomeWorld()
-				situation = FLYING
-				minSpeed = @/Speed
-	
-				disableOnStateChange = false
-				hideChildren = true
-				hidden = true
-	
-			}
-	
-			completeInSequence = false
-			disableOnStateChange = false
-			hideChildren = true
-	
-		}
-	
-		PARAMETER
-		{
-			name = VesselParameterGroup
-			type = VesselParameterGroup
-			title = with less than 10 m/s of vertical speed
-	
-			vessel = @/craft
-	
-			PARAMETER
-			{
-				name = ReachState
-				type = ReachState
-	
-				targetBody = HomeWorld()
-				situation = FLYING
-				minRateOfClimb = -10
-				maxRateOfClimb = 10
-	
-				disableOnStateChange = false
-				hideChildren = true
-				hidden = true
-	
-			}
-	
-			completeInSequence = true
-			disableOnStateChange = false
-			hideChildren = true
-	
-		}
-	
-		PARAMETER
-		{
-			name = Duration
-			type = Duration
-	
-			duration = 5s
-			preWaitText = and hold for:
-			waitingText = and hold for: 
-			completionText = You did it!
-	
-			completeInSequence = true
-			disableOnStateChange = false
-	
-		}
-	
-	
-		completeInSequence = true
-		disableOnStateChange = true
-	
 	}
 
 //Recovery Parameter - Landing
