Correct quotes, double does not work wel..

--- a/GameData/ContractPacks/KPlanes/Localization/en-us.cfg
+++ b/GameData/ContractPacks/KPlanes/Localization/en-us.cfg
@@ -190,7 +190,7 @@ Localization
 		#autoLOC_KPlanes_Modern_Mach5_description = We feel the need for speed, and five times the speed of sound, well, sounds catchy.
 		#autoLOC_KPlanes_Modern_Mach5_synopsis = Launch an airplane from the runway, fly at an @/PrettyAltRange, exceed @/PrettySpeed in level flight for 5 seconds, and then land and stop anywhere safely.
 		#autoLOC_KPlanes_Modern_Mach5_notes = Higher speeds means more powerful engines. Rockets are allowed, but watch out even that high up the air might burn you into a fireball.
-		#autoLOC_KPlanes_Modern_Mach5_completedMessage = "Five! Ahahahahah!" cackled Gene Kerman as thunder and lightning flashed around him. Seems like he's getting a little obsessed by speed.
+		#autoLOC_KPlanes_Modern_Mach5_completedMessage = ``Five! Ahahahahah!'' cackled Gene Kerman as thunder and lightning flashed around him. Seems like he's getting a little obsessed by speed.
 
 		// --------------------------------------------------------------------------------
 		#autoLOC_KPlanes_Modern_MesosphereJet_title = Get a plane high up to @/PrettyAltMin@/DescAltMin, without using rockets.
@@ -204,6 +204,6 @@ Localization
 		#autoLOC_KPlanes_Modern_Mach10_description = Double digit mach speeds should be possible if the plane is made entirely of engines. Rockets are allowed, but you should still have wings and stay in the atmosphere. You may have to coat the plane in specialized material to stop you turning into toast. Actually toast seems to be a good material to cover the plane with. Genius.
 		#autoLOC_KPlanes_Modern_Mach10_synopsis = Launch an airplane from the runway, fly at an @/PrettyAltRange, exceed @/PrettySpeed in level flight for 5 seconds, and then land and stop anywhere safely.
 		#autoLOC_KPlanes_Modern_Mach10_notes = Controlling heating will be critical to your surival. Perhaps using a crash dummy, robot or simulator first to make sure you can survive?
-		#autoLOC_KPlanes_Modern_Mach10_completedMessage = "I'm a shooting star leaping through the sky like a panther" sings Gene Kerman to a tune that seems familiar. The words don't quite seem right though, no matter, everybody is very excited by you nearly turning into cripsy toast.
+		#autoLOC_KPlanes_Modern_Mach10_completedMessage = ``I'm a shooting star leaping through the sky like a panther'' sings Gene Kerman to a tune that seems familiar. The words don't quite seem right though, no matter, everybody is very excited by you nearly turning into cripsy toast.
 	}
 }
