Allow repeating prototype a lot.

--- a/GameData/ContractPacks/KPlanes/StagePrototype.cfg
+++ b/GameData/ContractPacks/KPlanes/StagePrototype.cfg
@@ -21,17 +21,17 @@ CONTRACT_TYPE
 //CONTRACT DESCRIPTION
 
 	name = Start-StagingPrototype
-	title = Stage/payload prototype contract
+	title = PROTOTYPE: Stage/payload prototype contract
 	group = KPlanes_Start
 	agent = Wright Aeronautical
 
-	description = Used to test stage/payload style contracts.
-	synopsis = Testing.
-	notes = Testing.
+	description = PROTOTYPE: Used to test stage/payload style contracts.
+	synopsis = Prototype.
+	notes = Prototype.
 	completedMessage = Completed.
 
 //Contract Limits
-	maxCompletions = 1
+	maxCompletions = 1000
 	maxSimultaneous = 1
 //	weight = 100.0
 
@@ -48,10 +48,10 @@ CONTRACT_TYPE
 	targetBody = HomeWorld()
 
 //Contract Rewards
-	advanceFunds = 1 * @KPlanes:RewardAdvanceFunds
-	rewardFunds = 1 * @KPlanes:RewardFunds
-	rewardReputation = 1 * @KPlanes:RewardReputation
-	rewardScience = 1 * @KPlanes:RewardScience
+	advanceFunds = 0 * @KPlanes:RewardAdvanceFunds
+	rewardFunds = 0 * @KPlanes:RewardFunds
+	rewardReputation = 0 * @KPlanes:RewardReputation
+	rewardScience = 0 * @KPlanes:RewardScience
 
 //Contract Penalties
 	failureFunds = 0 * @KPlanes:FailureFunds
@@ -67,7 +67,8 @@ CONTRACT_TYPE
 		name = VesselParameterGroup
 		type = VesselParameterGroup
 		title = Your flying machine must
-
+		completedMessage = You succesfully staged the payload.
+		
 		define = @/craft
 		dissassociateVesselsOnContractCompletion = true
 
