Adding parameters to try to compute vehicle and parts staged.

--- a/GameData/ContractPacks/KPlanes/StagePrototype.cfg
+++ b/GameData/ContractPacks/KPlanes/StagePrototype.cfg
@@ -61,10 +61,46 @@ CONTRACT_TYPE
 
 //PARAMETERS FOR CONTRACT COMPLETION
 
+//LAUNCH STATE
+	PARAMETER
+	{
+		name = LaunchingParam
+		type = VesselParameterGroup
+		title = Launching parameter group
+
+		vessel = @/craft
+
+		PARAMETER
+		{
+			name = ReachState
+			type = ReachState
+
+			targetBody = HomeWorld()
+			situation = PRELAUNCH
+		}
+
+		disableOnStateChange = true
+		// hidden = true
+		// hideChildren = true
+	}
+
+	BEHAVIOUR
+	{
+		name = LaunchingStateCompute
+		type = Expression
+
+		PARAMETER_COMPLETED
+		{
+			parameter = LaunchingParam
+		        CC_LaunchParts = @/craft.Parts()
+			CC_LaunchVehicles = AllVessels().Exclude(@/craft)
+		}
+	}
+
 //Craft definition
 	PARAMETER
 	{
-		name = VesselParameterGroup
+		name = StagingParam
 		type = VesselParameterGroup
 		title = Your flying machine must
 		completedMessage = You succesfully staged the payload.
@@ -90,6 +126,22 @@ CONTRACT_TYPE
 		}
 
 		disableOnStateChange = false
+	}
+
+	BEHAVIOUR
+	{
+		name = StagingStateCompute
+		type = Expression
+
+		PARAMETER_COMPLETED
+		{
+			parameter = StagingParam
+		        CC_StagingParts = $CC_LaunchParts.ExcludeAll(@/craft.Parts())
+			CC_StagingNewVehicles = AllVessels().ExcludeAll($CC_LaunchVehicles)
+			CC_StagingNewVehiclesWithParts = $CC_StagingNewVehicles.Where(v => v.Parts().Count() == v.Parts().Where(p => $CC_StagingParts.Contains(p)).Count())
+)
+			CC_StagingVehicle = $CC_StagingNewVehiclesWithParts.First()
+		}
 	}
 
 //Contract Goals
