--- a/GameData/ContractPacks/KPlanes/StagePrototype.cfg
+++ b/GameData/ContractPacks/KPlanes/StagePrototype.cfg
@@ -68,7 +68,7 @@ CONTRACT_TYPE
 		type = VesselParameterGroup
 		title = Launching parameter group
 
-		vessel = @/craft
+		define = @/craft
 
 		PARAMETER
 		{
@@ -92,8 +92,9 @@ CONTRACT_TYPE
 		PARAMETER_COMPLETED
 		{
 			parameter = LaunchingParam
-		        CC_LaunchParts = @/craft.Parts()
-			CC_LaunchVehicles = AllVessels().Exclude(@/craft)
+			CC_LaunchVessel = Vessel(@/craft)
+		        CC_LaunchParts = $CC_LaunchVessel.Parts()
+			CC_LaunchOtherVessels = AllVessels().Exclude($CC_LaunchVessel)
 		}
 	}
 
@@ -105,7 +106,7 @@ CONTRACT_TYPE
 		title = Your flying machine must
 		completedMessage = You succesfully staged the payload.
 		
-		define = @/craft
+		vessel = @/craft
 		dissassociateVesselsOnContractCompletion = true
 
 		PARAMETER
@@ -136,8 +137,8 @@ CONTRACT_TYPE
 		PARAMETER_COMPLETED
 		{
 			parameter = StagingParam
-		        CC_StagingParts = $CC_LaunchParts.ExcludeAll(@/craft.Parts())
-			CC_StagingNewVehicles = AllVessels().ExcludeAll($CC_LaunchVehicles)
+		        CC_StagingParts = $CC_LaunchParts.ExcludeAll($CC_LaunchVessel.Parts())
+			CC_StagingNewVehicles = AllVessels().ExcludeAll($CC_LaunchOtherVessels)
 			CC_StagingNewVehiclesWithParts = $CC_StagingNewVehicles.Where(v => v.Parts().Count() == v.Parts().Where(p => $CC_StagingParts.Contains(p)).Count())
 )
 			CC_StagingVehicle = $CC_StagingNewVehiclesWithParts.First()
