Understanding types lession 101.

--- a/GameData/ContractPacks/KPlanes/StagePrototype.cfg
+++ b/GameData/ContractPacks/KPlanes/StagePrototype.cfg
@@ -92,9 +92,22 @@ CONTRACT_TYPE
 		PARAMETER_COMPLETED
 		{
 			parameter = LaunchingParam
-			CC_LaunchVessel = Vessel(@/craft)
-		        CC_LaunchParts = $CC_LaunchVessel.Parts()
+			type = Vessel
+			CC_LaunchVessel = @/craft
+		}
+
+		PARAMETER_COMPLETED
+		{
+			parameter = LaunchingParam
+			type = List<Vessel>
 			CC_LaunchOtherVessels = AllVessels().Exclude($CC_LaunchVessel)
+		}
+
+		PARAMETER_COMPLETED
+		{
+			parameter = LaunchingParam
+			type = List<AvailablePart>
+		        CC_LaunchParts = $CC_LaunchVessel.Parts()
 		}
 	}
 
@@ -137,10 +150,23 @@ CONTRACT_TYPE
 		PARAMETER_COMPLETED
 		{
 			parameter = StagingParam
+			type = List<AvailablePart>
 		        CC_StagingParts = $CC_LaunchParts.ExcludeAll($CC_LaunchVessel.Parts())
+		}
+
+		PARAMETER_COMPLETED
+		{
+			parameter = StagingParam
+			type = List<Vessel>
+		
 			CC_StagingNewVehicles = AllVessels().ExcludeAll($CC_LaunchOtherVessels)
 			CC_StagingNewVehiclesWithParts = $CC_StagingNewVehicles.Where(v => v.Parts().Count() == v.Parts().Where(p => $CC_StagingParts.Contains(p)).Count())
-)
+		}
+
+		PARAMETER_COMPLETED
+		{
+			parameter = StagingParam
+			type = Vessel
 			CC_StagingVehicle = $CC_StagingNewVehiclesWithParts.First()
 		}
 	}
