Ugh, I do not understand this.

--- a/GameData/ContractPacks/KPlanes/StagePrototype.cfg
+++ b/GameData/ContractPacks/KPlanes/StagePrototype.cfg
@@ -96,19 +96,18 @@ CONTRACT_TYPE
 			CC_LaunchVessel = @/craft
 		}
 
-		PARAMETER_COMPLETED
-		{
-			parameter = LaunchingParam
-			type = List<Vessel>
-			CC_LaunchOtherVessels = AllVessels().Exclude($CC_LaunchVessel)
-		}
+//		PARAMETER_COMPLETED
+//		{
+//			parameter = LaunchingParam
+//			CC_LaunchOtherVessels = AllVessels().Exclude($CC_LaunchVessel)
+//		}
 
-		PARAMETER_COMPLETED
-		{
-			parameter = LaunchingParam
-			type = List<AvailablePart>
-		        CC_LaunchParts = $CC_LaunchVessel.Parts()
-		}
+//		PARAMETER_COMPLETED
+//		{
+//			parameter = LaunchingParam
+//			type = List<AvailablePart>
+//		        CC_LaunchParts = $CC_LaunchVessel.Parts()
+//		}
 	}
 
 //Craft definition
@@ -147,28 +146,28 @@ CONTRACT_TYPE
 		name = StagingStateCompute
 		type = Expression
 
+//		PARAMETER_COMPLETED
+//		{
+//			parameter = StagingParam
+//			type = List<AvailablePart>
+//		        CC_StagingParts = $CC_LaunchParts.ExcludeAll($CC_LaunchVessel.Parts())
+//		}
+//
 		PARAMETER_COMPLETED
 		{
 			parameter = StagingParam
-			type = List<AvailablePart>
-		        CC_StagingParts = $CC_LaunchParts.ExcludeAll($CC_LaunchVessel.Parts())
-		}
 
-		PARAMETER_COMPLETED
-		{
-			parameter = StagingParam
-			type = List<Vessel>
-		
-			CC_StagingNewVehicles = AllVessels().ExcludeAll($CC_LaunchOtherVessels)
-			CC_StagingNewVehiclesWithParts = $CC_StagingNewVehicles.Where(v => v.Parts().Count() == v.Parts().Where(p => $CC_StagingParts.Contains(p)).Count())
+			CC_StagingAllVessels = AllVessels()
+//			CC_StagingNewVessels = ExcludeAll($CC_LaunchOtherVessels)
+//			CC_StagingNewVesselsWithParts = $CC_StagingNewVessels.Where(v => v.Parts().Count() == v.Parts().Where(p => $CC_StagingParts.Contains(p)).Count())
 		}
-
-		PARAMETER_COMPLETED
-		{
-			parameter = StagingParam
-			type = Vessel
-			CC_StagingVehicle = $CC_StagingNewVehiclesWithParts.First()
-		}
+//
+//		PARAMETER_COMPLETED
+//		{
+//			parameter = StagingParam
+//			type = Vessel
+//			CC_StagingVessel = $CC_StagingNewVesselsWithParts.First()
+//		}
 	}
 
 //Contract Goals
