Ideas on how to do stage prototype. Meh.

--- a/StagePrototype.cfg
+++ b/StagePrototype.cfg
@@ -62,6 +62,30 @@ CONTRACT_TYPE
 //PARAMETERS FOR CONTRACT COMPLETION
 
 //LAUNCH STATE
+	BEHAVIOUR
+	{
+		name = OnOffered
+		type = Expression
+
+		CONTRACT_OFFERED
+		{
+			type = List<Vessel>
+			CC_StagedNewVessels = AllVessels()
+		}
+
+		CONTRACT_OFFERED
+		{
+			type = VesselIdentifier
+			CC_StagedVessel = StagedVesselInvalid
+		}
+
+		CONTRACT_OFFERED
+		{
+			type = List<AvailablePart>
+			CC_StagedParts = AllPart()
+		}
+	}
+
 	PARAMETER
 	{
 		name = LaunchingParam
@@ -92,22 +116,21 @@ CONTRACT_TYPE
 		PARAMETER_COMPLETED
 		{
 			parameter = LaunchingParam
-			type = Vessel
-			CC_LaunchVessel = @/craft
+			CC_StagedNewVessels = AllVessels()
 		}
 
-//		PARAMETER_COMPLETED
-//		{
-//			parameter = LaunchingParam
-//			CC_LaunchOtherVessels = AllVessels().Exclude($CC_LaunchVessel)
-//		}
+		PARAMETER_COMPLETED
+		{
+			parameter = LaunchingParam
+			CC_StagedVessel = @/craft
+		}
 
-//		PARAMETER_COMPLETED
-//		{
-//			parameter = LaunchingParam
-//			type = List<AvailablePart>
-//		        CC_LaunchParts = $CC_LaunchVessel.Parts()
-//		}
+		PARAMETER_COMPLETED
+		{
+			parameter = LaunchingParam
+			type = List<AvailablePart>
+		        CC_StagedParts = Vessel(@/craft).Parts()
+		}
 	}
 
 //Craft definition
@@ -146,28 +169,24 @@ CONTRACT_TYPE
 		name = StagingStateCompute
 		type = Expression
 
-//		PARAMETER_COMPLETED
-//		{
-//			parameter = StagingParam
-//			type = List<AvailablePart>
-//		        CC_StagingParts = $CC_LaunchParts.ExcludeAll($CC_LaunchVessel.Parts())
-//		}
-//
+		PARAMETER_COMPLETED
+		{
+			parameter = StagingParam
+		        CC_StagedNewVessels = AllVessels().ExcludeList($CC_StagedNewVessels)
+		}
+
+		PARAMETER_COMPLETED
+		{
+			parameter = StagingParam
+		        CC_StagedParts = $CC_StagedParts.ExcludeList(Vessel(@/craft).Parts())
+		}
+
 		PARAMETER_COMPLETED
 		{
 			parameter = StagingParam
 
-			CC_StagingAllVessels = AllVessels()
-//			CC_StagingNewVessels = ExcludeAll($CC_LaunchOtherVessels)
-//			CC_StagingNewVesselsWithParts = $CC_StagingNewVessels.Where(v => v.Parts().Count() == v.Parts().Where(p => $CC_StagingParts.Contains(p)).Count())
+			CC_StagedVessel = $CC_StagedNewVessels.Where(v => v.Parts().Count() == v.Parts().Where(p => $CC_StagedParts.Contains(p)).Count()).First()
 		}
-//
-//		PARAMETER_COMPLETED
-//		{
-//			parameter = StagingParam
-//			type = Vessel
-//			CC_StagingVessel = $CC_StagingNewVesselsWithParts.First()
-//		}
 	}
 
 //Contract Goals
