Try other options. This is not working. Resort to code. Sigh.

--- a/StagePrototype.cfg
+++ b/StagePrototype.cfg
@@ -82,7 +82,7 @@ CONTRACT_TYPE
 		CONTRACT_OFFERED
 		{
 			type = List<AvailablePart>
-			CC_StagedParts = AllPart()
+			CC_StagedParts = AllParts()
 		}
 	}
 
@@ -172,13 +172,13 @@ CONTRACT_TYPE
 		PARAMETER_COMPLETED
 		{
 			parameter = StagingParam
-		        CC_StagedNewVessels = AllVessels().ExcludeList($CC_StagedNewVessels)
+		        CC_StagedNewVessels = AllVessels().ExcludeAll($CC_StagedNewVessels)
 		}
 
 		PARAMETER_COMPLETED
 		{
 			parameter = StagingParam
-		        CC_StagedParts = $CC_StagedParts.ExcludeList(Vessel(@/craft).Parts())
+		        CC_StagedParts = $CC_StagedParts.ExcludeAll(Vessel(@/craft).Parts())
 		}
 
 		PARAMETER_COMPLETED
